--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
                 </div>
               </li> -->
 
-            <!-- </ul>
-          </div> -->
+            </ul>
+          </div>
           <button class="accordion relative">
             <p id="centerText">신부 측 계좌번호</p>
             <div class="arrow"></div>
