--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@
             <img src="img/wedding/02.png" title="TITLE 2" />
             <img src="img/wedding/03.png" title="TITLE 3" />
             <img src="img/wedding/04.png" title="TITLE 4" />
-            <img src="img/wedding/05.png" title="TITLE 5" />
-            <img src="img/wedding/06.png" title="TITLE 6" />
-            <img id="addGalleyItem" class="hidden" src="img/wedding/07.png" title="TITLE 7" />
-            <img id="addGalleyItem" class="hidden" src="img/wedding/08.png" title="TITLE 8" />
-            <img id="addGalleyItem" class="hidden" src="img/wedding/09.png" title="TITLE 9" />
-            <img id="addGalleyItem" class="hidden" src="img/wedding/010.png" title="TITLE 10" />
-            <img id="addGalleyItem" class="hidden" src="img/wedding/011.png" title="TITLE 11" />
-            <img id="addGalleyItem" class="hidden" src="img/wedding/012.png" title="TITLE 12" />
+            <!-- <img src="img/wedding/05.png" title="TITLE 5" />
+            <img src="img/wedding/06.png" title="TITLE 6" /> -->
+            <!-- <img src="img/wedding/07.png" title="TITLE 7" />
+            <img src="img/wedding/08.png" title="TITLE 8" /> -->
+            <!-- <img id="addGalleyItem" class="hidden" src="img/wedding/09.png" title="TITLE 9" />
+            <img id="addGalleyItem" class="hidden" src="img/wedding/010.png" title="TITLE 10" /> -->
+            <img src="img/wedding/011.png" title="TITLE 11" />
+            <img src="img/wedding/012.png" title="TITLE 12" />
             <img id="addGalleyItem" class="hidden" src="img/wedding/013.png" title="TITLE 13" />
             <img id="addGalleyItem" class="hidden" src="img/wedding/014.png" title="TITLE 14" />
             <!-- <img id="addGalleyItem" class="hidden" src="img/wedding/15.png" title="TITLE 15" />
@@ -645,7 +645,7 @@
       <div class="swiper-slide">
         <img src="img/wedding/4.png" title="TITLE 4" />
       </div>
-      <div class="swiper-slide">
+      <!-- <div class="swiper-slide">
         <img src="img/wedding/5.png" title="TITLE 5" />
       </div>
       <div class="swiper-slide">
@@ -662,7 +662,7 @@
       </div>
       <div class="swiper-slide">
         <img src="img/wedding/10.png" title="TITLE 10" />
-      </div>
+      </div> -->
       <div class="swiper-slide">
         <img src="img/wedding/11.png" title="TITLE 11" />
       </div>
