--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       <!-- map 길찾기 -->
       <div class="animate-on-scroll" id="MapIconDiv" style="background-color: #A7C4E3;">
         <div>
-          <a class="maplink" href="https://kko.kakao.com/PNdIaFWOcN">
+          <a class="maplink">
             <div>
               <button id="kakaoMapButton" type="button">
                 <!-- <img
